[gd_scene load_steps=6 format=3 uid="uid://wxjr30vpxucc"]

[ext_resource type="FontFile" uid="uid://ctrocjt7m5uyr" path="res://assets/kenvector_future_thin.ttf" id="1_686p8"]
[ext_resource type="Script" path="res://hud.gd" id="1_vb226"]
[ext_resource type="Texture2D" uid="uid://swxe0ajj41px" path="res://assets/player_small.png" id="2_7ocw1"]
[ext_resource type="Texture2D" uid="uid://d05i5bwefkuc5" path="res://assets/play_button.png" id="3_ved4j"]
[ext_resource type="Texture2D" uid="uid://b1yj5n4oqpat8" path="res://assets/play_button_h.png" id="4_y4dfo"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vb226")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="MarginContainer/LivesCounter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_686p8")
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="L1" type="TextureRect" parent="MarginContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_7ocw1")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_7ocw1")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_7ocw1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("1_686p8")
theme_override_font_sizes/font_size = 64
text = "Space Rocks!"
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_ved4j")
texture_hover = ExtResource("4_y4dfo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
